samples/_failures_safe/1761513215_7fd76b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52698d50.c: In function ‘perform_compression’:
./samples/SAFE/__tmp_52698d50.c:142:17: error: expected expression at end of input
  142 |                 output->capacity =
      |                 ^~~~~~
./samples/SAFE/__tmp_52698d50.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52698d50.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52698d50.c:142:17: error: expected declaration or statement at end of input
